[package]
name = "UVRF" # the name of the package
version = "0.1.0"    # the current version, obeying semver

edition = "2021"
[dependencies]
p256 = { version = "0.13.2", features = ["ecdsa"] }
elliptic-curve = "0.13.8"
sha2 = "0.10.8"
rand = "0.8.0"
generic-array = "0.14.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"